[package]
name = "gorgeous"
version = "0.1.0"
edition = "2024"

[dependencies]
# typst essentials
typst = "0.14.2"
typst-pdf = "0.14.2"

# Fetching and unzipping packages
zune-inflate = { version = "0.2", default-features = false, features = ["gzip", "std"] }
tar = "0.4"
ureq = "2.9"

# utils
time = "0.3"
typst-kit = { version = "0.14.2", features = ["embed-fonts"] }
